--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -35,3 +35,7 @@ body {
 .max-char-width {
   max-width: 45ch;
 }
+
+.black-white-style {
+  @apply rounded-lg border-2 border-gray-500 bg-white text-zinc-900 font-medium focus:outline-none hover:bg-violet-300 hover:text-slate-950 hover:border-stone-950 focus-visible:bg-stone-950 focus-visible:text-sky-50 focus-visible:border-violet-500 focus-visible:ring-4 focus-visible:ring-violet-300 transition-colors;
+}
