--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -67,6 +67,15 @@ body {
   margin: 0;
 }
 
+input,
+select,
+button,
+textarea {
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+}
+
 .error-message {
   @apply text-sm text-red-500 mt-1 font-medium;
 }
@@ -85,4 +94,33 @@ body {
 
 .black-white-style {
   @apply rounded-lg border-2 border-gray-500 bg-white text-zinc-900 font-medium focus:outline-none hover:bg-violet-300 hover:text-slate-950 hover:border-stone-950 focus-visible:bg-stone-950 focus-visible:text-sky-50 focus-visible:shadow-[0px_0px_6px_6px_rgba(83,_43,_226,_0.4)] transition-colors;
+}
+
+@keyframes sound-wave {
+  0%,
+  100% {
+    height: 10px;
+    opacity: 0.5;
+  }
+  50% {
+    height: 40px;
+    opacity: 1;
+  }
+}
+
+.animate-sound-wave {
+  animation: sound-wave 1s ease-in-out infinite;
+}
+
+.animation-delay-100 {
+  animation-delay: 0.1s;
+}
+.animation-delay-200 {
+  animation-delay: 0.2s;
+}
+.animation-delay-300 {
+  animation-delay: 0.3s;
+}
+.animation-delay-400 {
+  animation-delay: 0.4s;
 }
